# vm_in_mircomanufacturing

./: .gitignore  .pre-commit-config.yaml  README.md  README_NEW_SYSTEM_DEPLOYMENT.md  pyproject.toml
app/: __init__.py  db.py  launcher.py  parser.py  runner.py  settings.py  shiny_app.py  spectrogram.py  watcher.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: airborne.yaml  dl.yaml  fusion.yaml  paths.yaml  predict_fused.yaml  split_presets.yaml  structure.yaml
dashboard_runtime/: pyproject.toml
notebooks/: audio_feature_extraction_extensive.ipynb
notebooks/air_influence_exploration/: 01_first_visualization_analysis.ipynb  02_combined_analysis_with_cwt.ipynb  03_spectral_subtraction_improved.ipynb  04_ANC.ipynb  README.md
notebooks/analysis/: duration_dependency_diagnostic.ipynb  feature_extraction_validation.ipynb  holdout_reliability_analysis.ipynb  predict_unseen_audio.ipynb  side_effect_control.ipynb
scripts/: extract_airborne.py  extract_structure.py  final_prediction.py  fuse.py  infer.py  predict_fused.py  select_features.py  split_audio.py  train_classical.py  train_dl.py
tests/: test_classical.py  test_data_io.py  test_dl.py  test_features.py  test_final_prediction.py  test_fusion.py
vm_micro/: __init__.py
vm_micro/classical/: __init__.py  inference.py  trainer.py
vm_micro/data/: __init__.py  io.py  manifest.py  plots.py  splitter.py
vm_micro/dl/: __init__.py  config.py  data.py  engine.py  frontends.py  models.py  splits.py  training.py  utils.py  visuals.py
vm_micro/features/: __init__.py  airborne.py  core.py  selection.py  structure.py  structure_extensive.py
vm_micro/fusion/: __init__.py  fuser.py
vm_micro/utils/: __init__.py  config.py  logging.py  paths.py
